--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,8 @@ name: shape_progress_bar
 description: "Flutter package to animate the borders of boxes in fun shapes like stars, rectangles, and more — with glowing gradients and looping support."
 version: 1.0.0
 
-repository: https://github.com/YOUR_USERNAME/shape_progress_bar
-homepage: https://github.com/YOUR_USERNAME/shape_progress_bar
+repository: https://github.com/m-uzair000/shape_progress_bar.git
+homepage: https://github.com/m-uzair000/shape_progress_bar.git
 
 
 environment:
