--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: shape_progress_bar
 description: "Flutter package to animate the borders of boxes in fun shapes like stars, rectangles, and more — with glowing gradients and looping support."
-version: 1.0.0
+version: 1.0.1
 
 repository: https://github.com/m-uzair000/shape_progress_bar.git
 homepage: https://github.com/m-uzair000/shape_progress_bar.git
@@ -24,6 +24,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/
+
 
   # To add assets to your package, add an assets section, like this:
   # assets:
